# argumentation

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: deploy-site.yml
crates/argumentation-bipolar/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/argumentation-bipolar/src/: coalition.rs  derived.rs  error.rs  flatten.rs  framework.rs  lib.rs  queries.rs  semantics.rs  types.rs
crates/argumentation-bipolar/tests/: flattening_closure.rs  uc1_corroboration.rs  uc2_coalition.rs  uc3_betrayal.rs  uc4_mediated_attack.rs
crates/argumentation-schemes/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/argumentation-schemes/src/: aif.rs  aspic.rs  critical.rs  error.rs  instance.rs  lib.rs  registry.rs  scheme.rs  types.rs
crates/argumentation-schemes/src/catalog/: analogy.rs  causal.rs  epistemic.rs  mod.rs  popular.rs  practical.rs  source.rs
crates/argumentation-schemes/tests/: aif_roundtrip.rs  catalog_coverage.rs  critical_questions.rs  instantiation.rs  properties.rs  scheme_conflict.rs
crates/argumentation-schemes/tests/fixtures/: expert_opinion.json
crates/argumentation-values/: Cargo.toml  README.md
crates/argumentation-values/src/: acceptance.rs  apx.rs  error.rs  framework.rs  lib.rs  multi.rs  scheme_bridge.rs  types.rs
crates/argumentation-values/tests/: hal_carla.rs  multi_value.rs
crates/argumentation-wasm/: Cargo.toml
crates/argumentation-wasm/src/: framework.rs  lib.rs  weighted.rs
crates/argumentation-wasm/tests/: framework_tests.rs  weighted_tests.rs
crates/argumentation-weighted/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/argumentation-weighted-bipolar/: CHANGELOG.md  Cargo.toml  README.md
crates/argumentation-weighted-bipolar/src/: error.rs  framework.rs  lib.rs  reduce.rs  semantics.rs  types.rs
crates/argumentation-weighted-bipolar/tests/: properties.rs  uc1_corroboration.rs  uc2_betrayal.rs
crates/argumentation-weighted/src/: error.rs  framework.rs  lib.rs  reduce.rs  semantics.rs  sweep.rs  types.rs  weight_source.rs
crates/argumentation-weighted/tests/: properties.rs  reduction_correctness.rs  uc1_friendship_flip.rs  uc2_cumulative_budget.rs  uc3_scene_intensity.rs  uc4_min_budget_query.rs
crates/encounter-argumentation/: CHANGELOG.md  Cargo.toml  README.md
crates/encounter-argumentation/src/: acceptance.rs  affordance_key.rs  arg_id.rs  critical_moves.rs  error.rs  knowledge.rs  lib.rs  name_resolver.rs  relationship.rs  resolver.rs  scoring.rs  societas_relationship.rs  state.rs  state_acceptance.rs  state_scorer.rs  value_argument.rs  value_scorer.rs
crates/encounter-argumentation/tests/: acceptance_test.rs  critical_moves_test.rs  integration_test.rs  resolver_test.rs  scoring_test.rs  uc_intensity_sweep.rs  uc_multibeat_scene.rs  uc_parity.rs  uc_relationship_modulation.rs  value_argument_test.rs
docs/superpowers/plans/: 2026-04-12-argumentation-schemes.md  2026-04-13-argumentation-bipolar.md  2026-04-13-argumentation-weighted.md  2026-04-17-argumentation-v0.2.0-sequence.md  2026-04-19-phase-a-encounter-argumentation-bridge.md  2026-04-19-phase-b-encounter-integration.md  2026-04-20-phase-b-state-scorer-bridge.md  2026-04-23-learning-site-docusaurus.md  2026-04-23-phase-c-societas-relationship-adapter.md  2026-04-24-move-societas-bridge-to-societas-encounter.md  2026-04-24-wasm-interactive-demos.md  2026-04-25-flagship-demo-and-open-areas.md  2026-04-29-argumentation-values.md  2026-04-30-docs-site-densification.md
src/: error.rs  framework.rs  lib.rs
src/aspic/: argument.rs  attacks.rs  defeat.rs  kb.rs  language.rs  mod.rs  postulates.rs  rules.rs
src/parsers/: apx.rs  mod.rs  tgf.rs
src/semantics/: admissibility.rs  complete.rs  grounded.rs  ideal.rs  labelling.rs  mod.rs  preferred.rs  semi_stable.rs  stable.rs  subset_enum.rs
tests/: ground_truth_aspic.rs  ground_truth_dung.rs  ground_truth_iccma.rs  iccma_benchmarks.rs  invariants.rs  stress.rs
tests/iccma_fixtures/: figure_1.apx  mutual_attack.apx  mutual_attack_preferred.txt
tests/iccma_fixtures/real_2019/: PROVENANCE.md  Small-result-b2.apx  Small-result-b35.apx  Small-result-b41.apx  Small-result-b57.apx  Small-result-b8.apx
tools/scene-tracer/: Cargo.toml
tools/scene-tracer/src/: main.rs  trace.rs
tools/scene-tracer/src/scenes/: east_wall.rs  hal_carla.rs  mod.rs  siege_council.rs
website/: .gitignore  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/docs/academic/: _category_.json  bibliography.md  history.md  reading-order.md
website/docs/concepts/: _category_.json  aspic-plus.md  aspic-plus.mdx  attacks-and-supports.md  attacks-and-supports.mdx  encounter-integration.md  encounter-integration.mdx  glossary.md  open-areas.mdx  semantics.md  semantics.mdx  value-based-argumentation.mdx  walton-schemes.md  walton-schemes.mdx  weighted-and-beta.md  weighted-and-beta.mdx  what-is-argumentation.md  what-is-argumentation.mdx
website/docs/examples/: _category_.json  courtroom.mdx  east-wall.mdx  hal-and-carla.mdx  nixon-diamond.mdx  playground.mdx  siege-council.mdx  thermostat.mdx  tweety-penguin.mdx
website/docs/getting-started/: _category_.json  choose-your-path.md  first-scene.md  second-scene-with-schemes.md  third-scene-with-values.md
website/docs/guides/: _category_.json  catalog-authoring.md  debugging-acceptance.md  implementing-acceptance-eval.md  implementing-action-scorer.md  import-export-apx.md  installation.md  migration-v0.4-to-v0.5.md  multi-character-consensus.md  societas-modulated-weights.md  tuning-beta.md  wiring-character-values.md
website/docs/reference/: _category_.json  argumentation-bipolar.md  argumentation-schemes.md  argumentation-values.md  argumentation-weighted-bipolar.md  argumentation-weighted.md  argumentation.md  changelog.md  encounter-argumentation.md  overview.md
website/src/css/: custom.css
website/src/lib/: argumentation.ts
website/src/pages/: index.module.css  index.tsx  wasm-smoke.tsx
(+74 files in other folders)
