[package]
name = "argumentation-weighted"
version = "0.2.0"
edition = "2024"
description = "Weighted argumentation frameworks with Dunne et al. 2011 inconsistency-budget semantics"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["argumentation", "weighted", "inconsistency-budget", "dunne", "dung"]
categories = ["algorithms"]

[dependencies]
argumentation = { path = "../.." }
thiserror = "2.0"
