[package]
name = "encounter-argumentation"
version = "0.4.0"
edition = "2024"
description = "Bridge between encounter social interactions and argumentation schemes"
license = "MIT OR Apache-2.0"
keywords = ["encounter", "argumentation", "schemes", "social-simulation", "narrative"]
categories = ["algorithms", "game-development"]

[dependencies]
encounter = { path = "../../../encounter" }
argumentation = { path = "../.." }
argumentation-schemes = { path = "../argumentation-schemes" }
argumentation-bipolar = { path = "../argumentation-bipolar" }
argumentation-weighted = { path = "../argumentation-weighted" }
argumentation-weighted-bipolar = { path = "../argumentation-weighted-bipolar" }
societas-core = { path = "../../../societas/crates/core" }
societas-relations = { path = "../../../societas/crates/relations" }
thiserror = "2.0"

[dev-dependencies]
societas-memory = { path = "../../../societas/crates/memory" }
