[package]
name = "scene-tracer"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"
argumentation-schemes = {path = "../../crates/argumentation-schemes"}
argumentation-weighted = {path = "../../crates/argumentation-weighted"}
encounter-argumentation = {path = "../../crates/encounter-argumentation"}
encounter = {path = "../../../encounter"}
